# Hansel

./: .env.example  .gitignore  01_exploration.ipynb  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/decisions/: 001-hybrid-cv-extraction.md  002-query-generation.md  003-keyword-strategy.md  004-job-sources-selection.md  005-location-handling.md  006-embedding-retrieval-strategy.md  007-score-normalization.md  008-email-hallucination-defense.md  009-swissdevjobs-adapter.md
frontend/: index.html
src/hansel/: __init__.py  __main__.py  agent.py  llm.py
src/hansel/api/: main.py
src/hansel/api/routes/: jobs.py
src/hansel/cv/: __init__.py  extractor.py  regex_parser.py  schemas.py
src/hansel/email_gen/: __init__.py  generator.py  schemas.py  validator.py
src/hansel/matcher/: __init__.py  embeddings.py  matcher.py  reranker.py  schemas.py  seniority_filter.py
src/hansel/search/: __init__.py  query_generator.py  schemas.py
src/hansel/sources/: __init__.py  adzuna.py  arbeitnow.py  base.py  orchestrator.py  resilience.py  schemas.py  swissdevjobs.py
tests/: conftest.py
tests/fixtures/: cv_junior_tech.md
tests/unit/: test_adzuna_adapter.py  test_arbeitnow_adapter.py  test_email_validator.py  test_orchestrator.py  test_regex_parser.py  test_seniority_filter.py  test_swissdevjobs_adapter.py
