[project]
name = "hansel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexia", email = "alexiahj111@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hansel = "hansel:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
