[project]
name = "hansel"
version = "0.1.0"
description = "Autonomous AI agent that reads your CV, finds matching jobs, and drafts personalized application emails — running locally with Ollama."
readme = "README.md"
authors = [
    { name = "Alexia", email = "alexiahj111@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
hansel = "hansel:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
